<resources>
    <string name="app_name">مائه من عظماء الاسلام</string>
    <string name="search_title">بحث</string>
    <string name="action_settings">Settings</string>

    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="sign_up_button_label">Sign Up</string>
    <string name="signup_error_message">Please make sure you enter an email address and password!</string>
    <string name="signup_error_title">Error!</string>
    <string name="signup_success">Account successfully created! You can now Login.</string>
    <string name="login_error_message">Please make sure you enter an email address and password!</string>
    <string name="login_error_title">Error!</string>
    <string name="login_button_label">Login</string>
    <string name="sign_up_text">Sign Up!</string>
    <string name="title_activity_login">Sign in</string>
    <string name="add_item">Add New Figure</string>
    <string name="action_logout">Logout</string>
    <string name="action_add">Add Figure</string>

    <string name="field_id">ID</string>
    <string name="field_name">Name</string>
    <string name="field_brief">Brief</string>
    <string name="field_from_date">From</string>
    <string name="field_to_date">To</string>
    <string name="field_content">Content</string>
    <string name="field_image">Image</string>
    <string name="field_frontnote">Front Note</string>


</resources>
