<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/feeds"
        android:title="Feeds" />
    <item
        android:id="@+id/friends"
        android:title="Friends" />
    <item
        android:id="@+id/about"
        android:title="About" />
    <item
        android:id="@+id/search"
        android:actionViewClass="android.widget.SearchView"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/search_title"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_add"
        android:title="@string/action_add"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/action_logout"
        app:showAsAction="never" />

</menu>
